--- a/index.html
+++ b/index.html
@@ -15,7 +15,19 @@
         </a>
         <nav class="navbar navbar-expand-lg">
           <div class="container-fluid">
-            
+            <ul class="navbar list-unstyled">
+              <li class="nav-item px-4">
+                <a class="nav-link text-whitehref="#">Home</a>
+              </li>
+              <li class="nav-item px-4">
+                <a class="nav-link text-white" href="#products">Products</a>
+              </li>
+              <li class="nav-item px-4">
+                <a class="nav-link text-white" href="#cart">
+                  <img src="img/shop.png" alt="">
+                </a>
+              </li>
+            </ul>
           </div>
         </nav>
       </nav>
