--- a/index.html
+++ b/index.html
@@ -5,25 +5,27 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" >
   <title>yolomy</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="container">
     <div class="firstpage">
       <nav class="navbar">
         <a href="#" class="nav-brand brand">
-          <h3>Yolomy</h3>
+          <h3 class="name text-white">Yolomy</h3>
         </a>
         <nav class="navbar navbar-expand-lg">
           <div class="container-fluid">
             <ul class="navbar list-unstyled">
               <li class="nav-item px-4">
-                <a class="nav-link text-whitehref="#">Home</a>
+                <a class="nav-link text-white" href="#">Home</a>
               </li>
               <li class="nav-item px-4">
                 <a class="nav-link text-white" href="#products">Products</a>
               </li>
               <li class="nav-item px-4">
-                <a class="nav-link text-white" href="#cart">
+                <a class="nav-link" href="#cart">
                   <img src="img/shop.png" alt="">
                 </a>
               </li>
