--- a/index.html
+++ b/index.html
@@ -33,6 +33,12 @@
           </div>
         </nav>
       </nav>
+      <div class="add">
+        <h3>Our Clothing, your comfort</h3>
+        <p>We understand that you need to look good and feel great. <br>
+          It all with whta you are wearing.
+        </p>
+      </div>
     </div>
   </div>
 </body>
