added a background img,styled text to white

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="container">
+  <div class="container-fluid">
     <div class="firstpage">
       <nav class="navbar">
         <a href="#" class="nav-brand brand">
@@ -33,7 +33,7 @@
           </div>
         </nav>
       </nav>
-      <div class="add">
+      <div class="add text-white">
         <h3>Our Clothing, your comfort</h3>
         <p>We understand that you need to look good and feel great. <br>
           It all with whta you are wearing.
