style-optimized the ad div

--- a/index.html
+++ b/index.html
@@ -12,9 +12,7 @@
   <div class="container-fluid">
     <div class="firstpage">
       <nav class="navbar">
-        <a href="#" class="nav-brand brand">
-          <h3 class="name text-white">Yolomy</h3>
-        </a>
+        <h3 class="nav-brand brand">Yolomy</h3>
         <nav class="navbar navbar-expand-lg">
           <div class="container-fluid">
             <ul class="navbar list-unstyled">
@@ -33,8 +31,9 @@
           </div>
         </nav>
       </nav>
-      <div class="add text-white">
+      <div class="add align-middle text-white">
         <h3>Our Clothing, your comfort</h3>
+        <br>
         <p>We understand that you need to look good and feel great. <br>
           It all with whta you are wearing.
         </p>
