inserted a mouse click image and styled it

--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
           It all with whta you are wearing.
         </p>
       </div>
+      <div class="mouse">
+        <img src="img/mouse_click.png" alt="">
+      </div>
     </div>
   </div>
 </body>
