--- a/index.html
+++ b/index.html
@@ -42,6 +42,13 @@
         <img src="img/mouse_click.png" alt="">
       </div>
     </div>
+    <div class="card">
+      <div class="selection">
+        <input type="checkbox" name="men" class="men" checked><label>MEN</label>
+        <input type="checkbox" name="women" class="women" checked><label>WOMEN</label>
+        <input type="checkbox" name="children" class="children"><label>CHILDREN</label>
+      </div>
+    </div>
   </div>
 </body>
 </html>
