added an input button and styled it

--- a/index.html
+++ b/index.html
@@ -42,12 +42,13 @@
         <img src="img/mouse_click.png" alt="">
       </div>
     </div>
-    <div class="card">
+    <div class="cardy">
       <div class="selection">
         <input type="checkbox" name="men" class="men" checked><label>MEN</label>
         <input type="checkbox" name="women" class="women" checked><label>WOMEN</label>
         <input type="checkbox" name="children" class="children"><label>CHILDREN</label>
       </div>
+      <input type="button" class="see-all" value="SEE ALL PRODUCTS">
     </div>
   </div>
 </body>
