added a select input

--- a/index.html
+++ b/index.html
@@ -50,6 +50,22 @@
       </div>
       <input type="button" class="see-all" value="SEE ALL PRODUCTS">
     </div>
+    <div class="displays">
+      <div class="shirt">
+        <select name="size" id="size">
+          <option value="SIZE">SIZE</option>
+          <option value="SMALL">SMALL</option>
+          <option value="MEDIUM">MEDIUM</option>
+          <option value="LARGE">LARGE</option>
+        </select>
+        <div class="circles">
+          <span class="dot1"></span>
+          <span class="dot2"></span>
+          <span class="dot3"></span>
+        </div>
+      </div>
+      
+    </div>
   </div>
 </body>
 </html>
