feat:added jacket image and optimized it

--- a/index.html
+++ b/index.html
@@ -109,10 +109,10 @@
             <option value="LARGE">LARGE</option>
           </select>
         </div>
-        <img class="jacket" src="img/tshirt.png" alt="">
+        <img class="jacket" src="img/giacket.png" alt="">
         <div class="price">
           <p>GIACKET</p>
-          <strong>5,00&#8364</strong>
+          <strong>60,00&#8364</strong>
         </div>
       </div>
       <div class="phase">
