feat:added shoe image and oprimized it

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       </div>
       <input type="button" class="see-all" value="SEE ALL PRODUCTS">
     </div>
-    <span><p>MEN</p> <hr></span> 
+    <hr><span><p>MEN</p></span> 
     <div class="displays">
         <div class="phase">
           <div class="size">
@@ -124,17 +124,26 @@
             <option value="LARGE">LARGE</option>
           </select>
         </div>
-        <img class="pant" src="img/pants.png" alt="">
+        <img class="shoes" src="img/trekkingshoes.png" alt="">
         <div class="price">
-          <p>PANTS FORCLAZ</p>
-          <strong>30,00&#8364</strong>
+          <p>TREKKING SHOES</p>
+          <strong>80,00&#8364</strong>
         </div>
       </div>
       <div class="phase">
-        <div class="amount">
-          <p>10 LITRES</p>
+        <div class="size">
+          <select name="size" id="size">
+            <option value="SIZE">SIZE</option>
+            <option value="SMALL">SMALL</option>
+            <option value="MEDIUM">MEDIUM</option>
+            <option value="LARGE">LARGE</option>
+          </select>
+          <div class="2dots">
+            <span class="dot4"></span>
+            <span class="dot5"></span>
+          </div>
         </div>
-        <img class="bag" src="img/backpack.png" alt="">
+        <img class="bag" src="img/.png" alt="">
         <div class="price">
           <p>T-SHIRT</p>
           <strong>20,00&#8364</strong>
