--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
             <span class="dot5"></span>
           </div>
         </div>
-        <img class="bag" src="img/.png" alt="">
+        <img class="bag" src="img/tshirt_ladies.png" alt="">
         <div class="price">
           <p>T-SHIRT</p>
           <strong>20,00&#8364</strong>
